<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rr_openrover_core</name>
  <version>0.0.0</version>
  <description>
  	Communicates with an OpenRover robot.
  </description>
  <maintainer email="dan@digilabs.io">Dan Rose</maintainer>
  <license>Apache License 2.0</license>
  <author>Dan Rose</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

