<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>openrover_core_msgs</name>
    <version>0.0.0</version>
    <description>Messages for communicating with an OpenRover</description>
    <maintainer email="dan@digilabs.io">Dan Rose</maintainer>
    <license>BSD-3-Clause</license>

    <author email="info@roverrobotics.com">Rover Robotics</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
