<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_bringup</name>
  <version>0.1.0</version>
  <description>
    Launch files and configuration scripts for operation of the Rover and suported sensors.
  </description>
  <maintainer email="nickpadilla@roverrobotics.com">Nick Padilla</maintainer>
  <license>BSD-3-Clause</license>

  <author email="info@roverrobotics.com">Rover Robotics</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <exec_depend>robot_state_publisher</exec_depend>

  <!-- for interfacing with hardware -->
  <exec_depend>rover_driver</exec_depend>

  <!-- for interfacing with sensors -->
  <exec_depend>rplidar_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
