<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_navigation</name>
  <version>0.1.0</version>
  <description>Contains Rover navigation launch files</description>
  <maintainer email="nickpadilla@roverrobotics.com">Nick Padilla</maintainer>
  <license>BSD-3-Clause</license>

  <author email="info@roverrobotics.com">Rover Robotics</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- for kicking off the various launch scripts -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- for describing the robot's appearance and the relative
    position of sensors in space -->
  <exec_depend>joint_state_publisher</exec_depend>

  <!-- for visualizing robot data -->
  <exec_depend>rviz2</exec_depend>

  <!-- for keyboard teleop -->
  <!-- <exec_depend>keystroke</exec_depend> -->

  <!-- navigation2 stack, for path planning and execution -->
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_core</exec_depend>
  <exec_depend>nav2_dwb_controller</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_recoveries</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>nav2_rviz_plugins</exec_depend>
  <exec_depend>nav2_behavior_tree</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>nav2_voxel_grid</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
