<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roverrobotics_ros2</name>
  <version>0.1.1</version>
  <description>
    Metapackage containing all packages for operating a Rover Pro robot.
  </description>
  <maintainer email="nickpadilla@roverrobotics.com">Nick Padilla</maintainer>
  <license>BSD-3-Clause</license>

  <author email="info@roverrobotics.com">Rover Robotics</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rover_bringup</exec_depend>
  <exec_depend>rover_description</exec_depend>
  <exec_depend>rover_driver</exec_depend>
  <exec_depend>rover_msgs</exec_depend>
  <exec_depend>rover_navigation</exec_depend>
  <exec_depend>rover_teleop</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
